tests/ui/type-alias-impl-trait/generic_duplicate_lifetime_param.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_lifetime_param.rs:11:26
   |
LL | fn one<'a>(t: &'a ()) -> Two<'a, 'a> {
   |                          ^^^^^^^^^^^ generic argument `'a` used twice
   |
note: for this opaque type
  --> $DIR/generic_duplicate_lifetime_param.rs:9:20
   |
LL | type Two<'a, 'b> = impl std::fmt::Debug + Captures<'a> + Captures<'b>;
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_lifetime_param.rs:13:5
   |
LL |     t
   |     ^
   |
note: lifetime used multiple times
  --> $DIR/generic_duplicate_lifetime_param.rs:9:10
   |
LL | type Two<'a, 'b> = impl std::fmt::Debug + Captures<'a> + Captures<'b>;
   |          ^^  ^^

error: aborting due to 2 previous errors

